@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1142.2.7 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1142.2.7.2.1 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -1161,3 +1161,4 @@ Changes from NetBSD 4.0 to NetBSD 5.0:
 	ntp:	import ntp 4.2.4p6.
 		openssl API related security fix.  [kardel 20090108]
 	dhcpcd(8): Import 4.0.10 [roy 20090204]
+	dhcpcd(8): Import 4.0.14 [roy 20090804]
